--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +11,52 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1d3459;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: 40%;
+  margin: 10px auto;
+}
+
+.Form label {
+  display: block;
+  margin-bottom: 5px;
+  color: white;
+}
+
+.Form label em {
+  color: red;
+}
+
+.Form input,
+.Form textarea {
+  width: 100%;
+  padding: 5px;
+}
+
+.Form fieldset {
+  border: 0;
+  margin: 10px 0;
+}
+
+.Form button {
+  padding: 10px;
+  background-color: #e37259;
+  border: #e37259;
+  cursor: pointer;
+}
+
+.Form .errors {
+  visibility: hidden;
+  color: red;
+}
+
+.Form input[data-touched="true"]:invalid ~ .errors {
+  visibility: visible;
 }
